docs/versioned_docs/version-0.3.x/sections.md
---
sidebar_position: 3
---

# Sections and Subsections

## Structure

Similar to Beamer, Touying also has the concept of sections and subsections.

Generally, level 1, level 2, and level 3 headings correspond to section, subsection, and title, respectively, as in the dewdrop theme.

```typst
#import "@preview/touying:0.3.1": *

#let store = themes.dewdrop.register(store)
#let (init, slides) = utils.methods(store)
#show: init

#let (slide,) = utils.slides(store)
#show: slides

= Section

== Subsection

=== Title

Hello, Touying!
```

![image](https://github.com/touying-typ/touying/assets/34951714/1574e74d-25c1-418f-a84f-b974f42edae5)

However, often we don't need subsections, and we can use level 1 and level 2 headings to correspond to section and title, as in the university theme.

```typst
#import "@preview/touying:0.3.1": *

#let store = themes.university.register(store)
#let (init, slides) = utils.methods(store)
#show: init

#let (slide,) = utils.slides(store)
#show: slides

= Section

== Title

Hello, Touying!
```

![image](https://github.com/touying-typ/touying/assets/34951714/9dd77c98-9c08-4811-872e-092bbdebf394)

In fact, we can control this behavior through the `slide-level` parameter of the `slides` function. `slide-level` represents the complexity of the nested structure, starting from 0. For example, `#show: slides.with(slide-level: 2)` is equivalent to the section, subsection, and title structure; while `#show: slides.with(slide-level: 1)` is equivalent to the section and title structure.

## Table of Contents

Displaying a table of contents in Touying is straightforward:

```typst
#import "@preview/touying:0.3.1": *

#let (init, slides, alert, touying-outline) = utils.methods(store)
#show: init

#let (slide,) = utils.slides(store)
#show: slides.with(slide-level: 2)

= Section

== Subsection

=== Title

==== Table of contents

#touying-outline()
```

![image](https://github.com/touying-typ/touying/assets/34951714/3cc09550-d3cc-40c2-a315-22ca8173798f)

Where the definition of `touying-outline()` is:

```typst
#let touying-outline(enum-args: (:), padding: 0pt) = { .. }
```

You can modify the parameters of the internal enum through `enum-args`.

If you have complex custom requirements for the table of contents, you can use:

```typst
#states.touying-final-sections(sections => ..)
```

As done in the dewdrop theme.